Fix Add Cloud Connection layout issues

--- a/src/components/AddCloudConnection/AddCloudConnection.scss
+++ b/src/components/AddCloudConnection/AddCloudConnection.scss
@@ -40,14 +40,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   padding: 48px 32px 32px;
   position: relative;
   :global(.form-group) {
-    &> label {
-      font-weight: 500;
+    margin-bottom: 16px;
+    margin-left: 64px;
+    width: 224px;
+    :global(.input-label) {
+      font-weight: $weight-regular;
       font-size: 10px;
-      color: $task-gray-light;
+      color: $gray;
       letter-spacing: -0.33px;
       text-transform: uppercase;
+      margin-bottom: 2px;
     }
-    margin-bottom: 32px;
     &:global(.switch-radio) {
       width: 100%;
     }
@@ -79,15 +82,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     }
   }
   .cloudFields {
-    :global(.form-group):not(:global(.switch-radio)) {
-      width: 50%;
-      float: left;
-      box-sizing: border-box;
-      &:nth-child(2n) {
-        padding-left: 16px;
-      }
-      &:nth-child(2n+1) {
-        padding-right: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -64px;
+    &.radioFields {
+      margin-left: 0;
+    }
+    .switchButton {
+      margin-top: 8px;
+      .switchLabel {
+        color: $gray;
       }
     }
     &:after {
